Changelog for HTML-Tree

{{$NEXT}}

    [DOCUMENTATION]
    * typo fixes supplied by David Steinbrunner (GitHub #1)

5.905    2013-06-29
   Trial Release by Christopher J. Madsen

    [FIXES]
    * as_XML would not allow single-character attribute names (RT #86566)

5.904    2013-06-08
   Trial Release by Christopher J. Madsen

    [FIXES]
    * as_text would infinite loop if it encountered undef (RT #83757)

5.903    2013-06-01
   Trial Release by Christopher J. Madsen

    [ENHANCEMENTS]
    * $HTML::Element::default_encoding gets its default value from
      $ENV{PERL_HTML_TREE_ENCODING}, so you can restore the old behavior
      without modifying any code (just export PERL_HTML_TREE_ENCODING='').

5.902    2013-03-01
   Trial Release by Christopher J. Madsen

    [DOCUMENTATION]
    * minor clarifications

    [TESTS]
    * Add dump.t

5.901    2012-12-22
   Trial Release by Christopher J. Madsen

    [TESTS]
    * Fix encoding.t to work on Perl 5.8.9 and 5.10.0

5.900    2012-12-15
   Trial Release by Christopher J. Madsen

    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * parse_file (and new_from_file) now try to determine the encoding
      automatically when given a filename (not a filehandle).  To restore
      the old behavior, set the new encoding attribute to the empty string.
      To restore it globally, set $HTML::Element::default_encoding = ''.

    [ENHANCEMENTS]
    * new_from_file & new_from_url now let you set parsing attributes
    * New shortcut constructor new_from_string is like new_from_content,
      but allows you to set parsing attributes
    * New shortcut constructor new_from_http for constructing a tree
      from the content of a HTTP::Message (or subclass like HTTP::Response)
    * Setting the new self_closed_tags attribute to 1 makes TreeBuilder
      handle XML-style self-closed tags (e.g. <a id="a1" />)
    * New child_nodes method makes for simpler recursion
    * New openw and encode_fh methods for writing a file with the